chore 1.优化安全坐标查找